# anitune

./: .cruft.json  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  install.sh  make_env.bash  pyproject.toml  setup.py
.github/: CODEOWNERS
ani_ftune/: batching.py  callbacks.py  cli.py  config.py  configuration.py  exceptions.py  ftune.py  lit_models.py  lit_training.py  losses.py  model_builders.py  trainer.py  training.py  utils.py
ani_ftune/old/: __init__.py  assemble.py  builders.py  core.py  dipole_model.py  lean_dipole_model.py  locations.py  preprocess_data.py  runners.py  test_dipoles_and_energies.py  trainer.py  utils.py
anitune/: __init__.py  annotations.py  arch.py  batching.py  callbacks.py  cli.py  config.py  defaults.py  display.py  lit_callbacks.py  lit_model.py  lit_models.py  lit_training.py  losses.py  model_builders.py  paths.py  utils.py
anitune/old/: assemble.py  core.py  lean_dipole_model.py  trainer.py
anitune/templates/: bench.slurm.sh.jinja  custom.py.jinja  hpg.slurm.sh.jinja  moria.slurm.sh.jinja
ci/: run-mypy
tests/: test_import_anitune.py  test_simple.py
