[project]
    name = "anitune"
    authors = [{name = "Ignacio Pickering", email = "ign.pickering@gmail.com"}]
    license = {file = "LICENSE"}
    description = "Python package anitune"
    requires-python = ">=3.8"
    dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
    readme = {file = ["README.md"]}

[build-system]
    requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
    build-backend = "setuptools.build_meta"

[project.urls]
    homepage = "https://github.com/IgnacioJPickering/ani-ftune.git"
    repository = "https://github.com/IgnacioJPickering/ani-ftune.git"
    documentation = "https://github.com/IgnacioJPickering/ani-ftune.git"

[project.scripts]
    ani="anitune.cli:app"

# triggers using the scm version
[tool.setuptools_scm]

[tool.setuptools]
packages = ["anitune"]

[tool.black]
    line-length = 88
    target_version = ["py38"]

[tool.mypy]
    ignore_missing_imports = true
    warn_redundant_casts = true
    warn_unused_configs = true
    disallow_incomplete_defs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    python_version = '3.10'
    exclude = "submodules/.*"
